[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/misc/tablet_sprite.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://misc/static_gif.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/cmsp.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="cmsp" type="Node2D"]
position = Vector2( 100, 0 )
script = ExtResource( 4 )

[node name="color" type="ColorRect" parent="."]
margin_left = 81.0
margin_top = 296.0
margin_right = 348.0
margin_bottom = 456.0
color = Color( 0, 0, 0, 1 )

[node name="static_gif" parent="." instance=ExtResource( 3 )]
position = Vector2( 215.625, 377.625 )
scale = Vector2( 0.37882, 0.347397 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 217, 377 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="questionText" type="RichTextLabel" parent="."]
margin_left = 123.0
margin_top = 310.0
margin_right = 291.0
margin_bottom = 364.0
custom_fonts/normal_font = SubResource( 1 )
text = "QUANTO Ã‰ 1 + 1?"
fit_content_height = true
scroll_active = false

[node name="answer_01" type="Button" parent="."]
margin_left = 116.0
margin_top = 364.0
margin_right = 173.0
margin_bottom = 385.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "A. 11"
flat = true

[node name="answer_02" type="Button" parent="."]
margin_left = 232.0
margin_top = 364.0
margin_right = 289.0
margin_bottom = 385.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "B. 2"
flat = true

[node name="answer_03" type="Button" parent="."]
margin_left = 114.0
margin_top = 409.0
margin_right = 171.0
margin_bottom = 430.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "C. 0"
flat = true

[node name="answer_04" type="Button" parent="."]
margin_left = 234.0
margin_top = 409.0
margin_right = 300.0
margin_bottom = 430.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "C. 978"
flat = true

[connection signal="pressed" from="answer_01" to="." method="_on_answer_01_pressed"]
[connection signal="pressed" from="answer_02" to="." method="_on_answer_02_pressed"]
[connection signal="pressed" from="answer_03" to="." method="_on_answer_03_pressed"]
[connection signal="pressed" from="answer_04" to="." method="_on_answer_04_pressed"]
